--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lk3b",
   "version": "1.0.0",
   "private": true,
-  "description": "LK3B",
+  "description": "lk3b",
   "author": "lewiskwlaw",
   "keywords": [
     "gatsby"
@@ -15,23 +15,8 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^2.0.0",
-    "@mdx-js/react": "^2.0.0",
-    "babel-plugin-styled-components": "^2.0.2",
-    "gatsby": "^2.19.38",
-    "gatsby-plugin-google-analytics": "^2.11.0",
-    "gatsby-plugin-image": "^0.7.2",
-    "gatsby-plugin-manifest": "^2.6.1",
-    "gatsby-plugin-mdx": "^2.14.0",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-sharp": "^2.14.4",
-    "gatsby-plugin-sitemap": "^2.12.0",
-    "gatsby-plugin-styled-components": "^3.10.0",
-    "gatsby-source-filesystem": "^2.11.1",
-    "gatsby-transformer-sharp": "^2.12.1",
+    "gatsby": "^4.7.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0",
-    "styled-components": "^5.3.3"
+    "react-dom": "^17.0.1"
   }
 }
